@@ -541,6 +541,8 @@ initfromrad()			/* initialize input from a Radiance picture */
 			cvts.tf = Color2RRGGBB;
 			SET(C_RFLT);
 		} else if (CHK(C_TFLT)) {
+			TIFFSetField(cvts.tif, TIFFTAG_SAMPLEFORMAT,
+					SAMPLEFORMAT_IEEEFP);
 			cvts.tf = Color2RfGfBf;
 			SET(C_RFLT);
 		} else
@@ -553,6 +555,8 @@ initfromrad()			/* initialize input from a Radiance picture */
 			cvts.tf = Color2GGry;
 			SET(C_RFLT);
 		} else if (CHK(C_TFLT)) {
+			TIFFSetField(cvts.tif, TIFFTAG_SAMPLEFORMAT,
+					SAMPLEFORMAT_IEEEFP);
 			cvts.tf = Color2Gryf;
 			SET(C_RFLT);
 		} else
